force-app/main/default/objects/Student__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <precision>5</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>