force-app/main/default/objects/Student__c/fields/SSN_Num__c.field-meta.xml
<CustomField>
    <fullName>SSN_Num__c</fullName>
    <label>SSN Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>