force-app/main/default/objects/Student__c/fields/Valid_Age__c.field-meta.xml
<CustomField>
    <fullName>Valid_Age__c</fullName>
    <formula>IF(Age__c &gt; 18, &apos;Major Passport&apos;, &apos;Minor Passport&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid_Age</label>
    <type>Text</type>
</CustomField>