force-app/main/default/objects/Student__c/recordTypes/Indian_Student.recordType-meta.xml
<RecordType>
    <fullName>Indian_Student</fullName>
    <active>true</active>
    <label>Indian Student</label>
</RecordType>