force-app/main/default/objects/Student__c/recordTypes/Non_Indian_Student.recordType-meta.xml
<RecordType>
    <fullName>Non_Indian_Student</fullName>
    <active>true</active>
    <label>Non Indian Student</label>
</RecordType>